versioned_docs/version-3.0.3/install-cra.mdx
---
id: install-cra
title: Install in Create React App project
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import { TileLink } from '../../src/components';

  <Tabs
  defaultValue='template'
  values={[
  { label: 'NativeBase template', value: 'template' },
  { label: 'Create React app CLI', value: 'cli' }
  ]}>

  <TabItem value="template">

The easiest way to get started with NativeBase in create react app is using NativeBase template.

### JavaScript

```bash
npx create-react-app my-app --template nativebase
yarn start
```

### TypeScript

```bash
npx create-react-app my-app --template nativebase-typescript
yarn start
```

  </TabItem>

  <TabItem value="cli">

Create a new CRA project

```bash
npx create-react-app my-app
cd my-app
```

[Refer this guide](https://necolas.github.io/react-native-web/docs/installation/) if you need additional configurations.

### Install dependencies

  <Tabs
  defaultValue='yarn'
  values={[
  { label: 'yarn', value: 'yarn' },
  { label: 'npm', value: 'npm' }
  ]}>

  <TabItem value="yarn">

```bash
yarn add react-native-web native-base react-native-svg styled-components styled-system react-native-safe-area-context
```

  </TabItem>

  <TabItem value="npm">

```bash
npm install react-native-web native-base react-native-svg styled-components styled-system react-native-safe-area-context
```

  </TabItem>

  </Tabs>

### Run the Hello world example

Put the below code in your App.js

```jsx
import React from 'react';
import { NativeBaseProvider, Box } from 'native-base';

function App() {
  return (
    <NativeBaseProvider>
      <Box>Hello world</Box>
    </NativeBaseProvider>
  );
}
```

  </TabItem>

  </Tabs>

<div style={{ textAlign: 'center' }}>
  <img src="/img/minion.gif" />
</div>

<div className="tailwind">
  <div className="mt-4 mb-8">
    <div className="row pl-0 ml-0">
      <TileLink
        title="Customize NativeBaseProvider"
        url="setup-provider"
        description="NativeBaseProvider provides theme throughout your application"
        className="bg-blueGray-600 mt-2"
      />
      <TileLink
        title="Theme"
        url="default-theme"
        description="Read more about the default NativeBase theme and how to override it"
        className="bg-blueGray-600  mt-2"
      />
    </div>
    <div className="row mt-2 pl-0 ml-0">
      <TileLink
        title="Utility props"
        url="utility-props"
        description="Shorthands of commonly used styling props which maps with the provided theme"
        className="bg-blueGray-600"
      />
    </div>
  </div>
</div>
